  used now as custom error handler.

- OpenFTS search plugin
  There existed some code to use OpenFTS as a search engine. This code was never completed
  though, and in an unusable state. Therefore it has been removed.

- eZXML
  The deprecated eZXML library, a non-standard-compliant DOM implementation, has been removed.

- eZReference
  The refence module from the kernel has been removed.


New constants in config.php
---------------------------

EZP_INI_FILEMTIME_CHECK
    This new setting controls whether eZINI should check if the settings have
    been updated in the *.ini-files*. If this check is disabled eZ Publish
    will always used the cached values, lowering the amount of stat-calls to
    the file system, and thus increasing performance.

EZP_AUTOLOAD_ALLOW_KERNEL_OVERRIDE
    This setting controls if eZ Publish's autoload system should allow, and
    load classes, which override kernel classes from extensions.

EZP_USE_BUNDLED_COMPONENTS
    If you are using a distribution of eZ Publish with which the necessary
    eZ Components are bundled (in lib/ezc), then you can use this setting to
    control if the bundled eZ Components should be used (true) or not (false).
    By default, when this setting is not present, the bundled eZ Components are
    used. If you're using the bundled eZ Components it's recommended to define
    EZP_USE_BUNDLED_COMPONENTS as a boolean true anyway, for optimal speed.

EZC_BASE_PATH
   If you are not using the bundled eZ Components, then for optimal speed it is
   recommended to set EZC_BASE_PATH to either ezc/Base/base.php or Base/src/base.php,
   depending on how you installed the eZ Components. By default, if this setting
   is not present, eZ Publish first tries to include ezc/Base/base.php. If that fails
   Base/src/base.php is included.

Changes to method signatures
----------------------------

- eZContentObject - fetchAttributesByIdentifier

  Parameter 3 is changed to be an array of locale codes, rather than a string